test/sema/positive/tuples03.impala
fn main() -> int {
    let x: (int, int) = (1,2);
    x(0) + x(1)
}
